<resources>
    <string name="app_name">Panic Button</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bantuan">Bantuan</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_keluar">Keluar</string>

    <string name="home_second">Home Second</string>
</resources>
