<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bantuan"
            android:icon="@drawable/ic_help_black"
            android:title="@string/menu_bantuan" />
        <item
            android:id="@+id/nav_pengaturan"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_pengaturan" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_person_black"
            android:title="@string/menu_profil" />
    </group>
</menu>
