<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="desi.antika.sari.panicbuuton.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="desi.antika.sari.panicbuuton.fragment.home.HomeFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_bantuan"
        android:name="desi.antika.sari.panicbuuton.fragment.bantuan.BantuanFragment"
        android:label="@string/menu_bantuan"
        tools:layout="@layout/fragment_bantuan" />

    <fragment
        android:id="@+id/nav_pengaturan"
        android:name="desi.antika.sari.panicbuuton.fragment.pengaturan.PengaturanFragment"
        android:label="@string/menu_pengaturan"
        tools:layout="@layout/fragment_pengaturan" />
    <fragment
        android:id="@+id/nav_profil"
        android:name="desi.antika.sari.panicbuuton.fragment.profil.ProfilFragment"
        android:label="@string/menu_profil"
        tools:layout="@layout/fragment_profil" />
</navigation>